<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".error.ErrorActivity">

    <include
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_layout"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <org.chicha.ttt.views.NewPipeTextView
                android:id="@+id/errorSorryView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sorry_string"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <org.chicha.ttt.views.NewPipeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_happened_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <org.chicha.ttt.views.NewPipeTextView
                android:id="@+id/errorMessageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_labels"
                android:textColor="?attr/colorAccent" />

            <org.chicha.ttt.views.NewPipeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/what_device_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.chicha.ttt.views.NewPipeTextView
                    android:id="@+id/errorInfoLabelsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_labels"
                    android:textColor="?attr/colorAccent" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp">

                    <org.chicha.ttt.views.NewPipeTextView
                        android:id="@+id/errorInfosView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </HorizontalScrollView>

            </LinearLayout>

            <org.chicha.ttt.views.NewPipeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/error_details_headline"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <org.chicha.ttt.views.NewPipeTextView
                    android:id="@+id/errorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:typeface="monospace" />
            </HorizontalScrollView>

            <org.chicha.ttt.views.NewPipeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/your_comment"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.chicha.ttt.views.NewPipeEditText
                android:id="@+id/errorCommentBox"
                android:hint="@string/text_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType=""
                android:minHeight="48dp" />

            <Button
                android:id="@+id/errorReportEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_report_button_text"
                android:textColor="#B71C1C"
                tools:ignore="TextContrastCheck" />

            <org.chicha.ttt.views.NewPipeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/error_report_open_github_notice"
                android:textColor="#3E2723"
                android:textStyle="bold" />

            <Button
                android:id="@+id/errorReportCopyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copy_for_github"
                android:textColor="#B71C1C"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/errorReportGitHubButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_report_open_issue_button_text"
                android:textColor="#B71C1C"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
