<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <org.chicha.ttt.views.NewPipeTextView
        android:id="@+id/file_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_layout"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="6dp"
        android:text="@string/msg_name"
        android:textColor="#000000" />

    <org.chicha.ttt.views.NewPipeEditText
        android:id="@+id/file_name"
        android:hint="@string/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name_text_view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="6dp"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp" />

    <RadioGroup
        android:id="@+id/video_audio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file_name"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="6dp"
        android:gravity="left"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <RadioButton
            android:id="@+id/video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:checked="true"
            android:text="@string/video"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/audio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:textColor="#000000"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/subtitle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:text="@string/caption_setting_title"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <Spinner
        android:id="@+id/quality_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_audio_group"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:minWidth="150dp"
        tools:listitem="@layout/stream_quality_item" />

    <org.chicha.ttt.views.NewPipeTextView
        android:id="@+id/threads_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quality_spinner"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="6dp"
        android:text="@string/msg_threads"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/threads_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/threads_text_view"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <org.chicha.ttt.views.NewPipeTextView
            android:id="@+id/threads_count"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="2dp"
            android:textColor="#000000"
            tools:ignore="RtlHardcoded,RtlSymmetry"
            tools:text="3" />

        <SeekBar
            android:id="@+id/threads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="31"
            android:progress="3" />
    </LinearLayout>

    <org.chicha.ttt.views.NewPipeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/threads_layout"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/streams_not_yet_supported_removed"
        android:textColor="#000000"
        android:textSize="12sp" />

</RelativeLayout>
